transform and present data gotten from dune

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,16 @@
         scrollbar-width: none;
     }
 }
+
+@keyframes progress {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+.animate-progress {
+    animation: progress 300s linear;
+}
